--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,16 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".MainApplication"
         android:supportsRtl="true"
         android:theme="@style/Theme.Metronome"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true">
+        </activity>
+
+        <activity android:name=".ui.PlayActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
